# teddy

./: .eslintrc.json  .prettierrc  README.md  index.html  next.config.js  package.json  pnpm-lock.yaml  tailwind.config.js  tsconfig.json  vite.config.ts
.github/workflows/: publish.yml  pull-request.yml
app/: layout.tsx  page.tsx
app/(main-layout)/: layout.tsx  page.tsx
components/: Header.tsx  Textarea.tsx
src/: main.tsx  vite-env.d.ts
src-tauri/: Cargo.toml  tauri.conf.json  tauri.macos.conf.json
src-tauri/icons/: icon.icns
src-tauri/src/: main.rs
src/app/: layout.tsx
src/app/(main-layout)/: layout.tsx  page.tsx
src/components/: Footer.tsx  Header.tsx  Icon.tsx  Input.tsx  Radio.tsx  Textarea.tsx  WindowControls.tsx
src/components/actions/: Action.tsx  ActionForm.tsx  ActionsList.tsx
src/components/common/: Copy.tsx  EmojiPicker.tsx  Icon.tsx  Input.tsx  Radio.tsx  Textarea.tsx  Toggle.tsx
src/components/layout/: root.tsx  settings.tsx
src/components/messages/: Message.tsx  (+1 more)
src/hooks/: useChatCompletion.ts  useOnClickOutside.ts
src/lib/: actions.ts  airtable.ts  openai.ts  pinecone.ts  shortcuts.ts  snippets.ts  store.ts
src/providers/: ActionsProvider.tsx  AppProviders.tsx  ChatProvider.tsx  SettingsProvider.tsx  SnippetsProvider.tsx  ThemeProvider.tsx
src/stores/: actions.store.ts  chat.store.ts  settings.store.ts  snippets.store.ts  theme.store.ts
src/styles/: _typography.css  globals.css  typography.css  variables.css
src/utils/: constants.ts  fetcher.ts  functions.ts  types.ts
src/views/: router.tsx
styles/: globals.css
(+32 files in other folders)
