[package]
name = "bear-ai"
version = "0.1.0"
description = "Your AI Assistant"
authors = ["you"]
license = ""
repository = ""
default-run = "bear-ai"
edition = "2021"
rust-version = "1.60"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[build-dependencies]
tauri-build = { version = "1.3.0", features = [] }

[dependencies]
serde_json = "1.0"
serde = { version = "1.0", features = ["derive"] }
tauri = { version = "1.3.0", features = ["clipboard-read-text", "clipboard-write-text", "global-shortcut-all", "notification-all", "os-all", "path-all", "window-center", "window-close", "window-hide", "window-maximize", "window-minimize", "window-set-content-protected", "window-set-position", "window-set-size", "window-show", "window-start-dragging", "window-unmaximize", "window-unminimize"] }
tauri-plugin-store = { git = "https://github.com/tauri-apps/plugins-workspace", branch = "dev" }


[features]
# this feature is used for production builds or when `devPath` points to the filesystem and the built-in dev server is disabled.
# If you use cargo directly instead of tauri's cli you can use this feature flag to switch between tauri's `dev` and `build` modes.
# DO NOT REMOVE!!
custom-protocol = [ "tauri/custom-protocol" ]
